--- a/CHIP-8Emulator.vcxproj.filters
+++ b/CHIP-8Emulator.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClInclude Include="src\CHIP8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Instructions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
