--- a/CHIP-8Emulator.vcxproj
+++ b/CHIP-8Emulator.vcxproj
@@ -160,6 +160,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\CHIP8.h" />
+    <ClInclude Include="src\Instructions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
