--- a/CHIP-8Emulator.vcxproj
+++ b/CHIP-8Emulator.vcxproj
@@ -96,6 +96,7 @@
   <ItemGroup>
     <None Include=".gitattributes" />
     <None Include=".gitignore" />
+    <None Include="assets\octojam1title.ch8" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\CHIP8.h" />
