--- a/CHIP-8Emulator.vcxproj.filters
+++ b/CHIP-8Emulator.vcxproj.filters
@@ -26,6 +26,7 @@
     <None Include=".gitignore" />
     <None Include=".gitattributes" />
     <None Include="assets\octojam1title.ch8" />
+    <None Include="assets\Space Invaders [David Winter] (alt).ch8" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\CHIP8.h">
